# sotest

./: README.md  fastapi.db  pyproject.toml
alembic/: env.py
alembic/versions/: 5e1ab28cacca_.py  8fcf8122c34e_.py  e60642fd1611_.py
app/: main.py
app/api/: category.py  endpoints.py  product.py
app/core/: base.py  config.py  db.py
app/crud/: base.py  category.py  product.py
app/models/: __init__.py  category.py  product.py
app/schemas/: category.py  product.py
